modificata la logica di trasformazione dati  da dto a entity e viceversa